Added DataBinding Library - Use ObservableField to store and auto update Now field in Clock.java - Get the binding at onCreate() - Get the view(Switch) via the binding instance - Bind onClick event to the method inside Clock.java - Set a Handler called timerHandler to run update runnable every second

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android-DualPane-Layout</string>
+    <string name="UpdateButtonText">Update</string>
 </resources>
