--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android-DualPane-Layout</string>
     <string name="UpdateButtonText">Update</string>
+    <string name="NextPageButtonText">Next Page</string>
 </resources>
